# OrcaSlicer-K2-Wave

./: .gitignore  CFS_INTEGRATION_CONTEXT.md  CHANGELOG.md  CMakeLists.txt  README.md  build_linux.sh  build_release_macos.sh  build_release_vs.bat  build_release_vs2022.bat  version.inc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  wave_overhang_bug.yml
.github/workflows/: _gen_gmp_arm64.yml  build_all.yml  build_check_cache.yml  build_deps.yml  build_orca.yml  build_windows_arm64.yml  check_locale.yml  check_profiles.yml  publish_release.yml  release.yml  shellcheck.yml  sync-upstreams.yml
doc/: automation.md
docs/: ALGORITHMS.md  LIMITATIONS.md  WAVE_OVERHANG_SETTINGS.md
resources/profiles/: Creality.json  Custom.json  IdeaFormer.json
scripts/: appimage_lib_policy.sh
scripts/flatpak/: io.github.nanashithenameless.OrcaSlicer.yml
snap/: README.md  snapcraft.yaml
snap/local/: launcher
src/: CMakeLists.txt  OrcaSlicer.cpp
src/PrintConfigs/: config_metadata.proto  filament.proto  layout.yaml  print.proto  printer.proto
src/dev-utils/: generate_system_cache.cpp
src/libslic3r/: AppConfig.cpp  BeltGCode.cpp  BeltGCodeWriter.cpp  BeltGCodeWriter.hpp  BeltSliceStrategy.cpp  BeltSliceStrategy.hpp  BeltTransform.cpp  BeltTransform.hpp  BuildVolume.cpp  CMakeLists.txt  ClipperUtils.cpp  Config.cpp  Extruder.cpp  Extruder.hpp  ExtrusionEntity.hpp  FirstLayerPlane.cpp  GCode.cpp  GCode.hpp  (+21 more)
tests/automation/: CMakeLists.txt  test_dispatcher.cpp  test_locator.cpp
tools/: config_codegen.py  config_metadata_pb2.py  run_codegen.py
(+80 files in other folders)
